--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,20 +5,20 @@ body {
 
 body {
     margin: 0;
-  background: linear-gradient(to right bottom, #49a09d, #0d0c3d);
+  background: linear-gradient(#49a09d, #0d0c3d);
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
 
 .upper {
-  color: #49a09d;
+  color:#000000;
   font-family: 'Raleway',sans-serif;
   font-size: 23px;
   font-weight: 800;
   line-height: 30px;
   margin: 0 0 24px;
   text-align: center;
-  background: #000000;
+  background: #3eaba7;
   position: absolute;
   width: 100%;
   height: 100px;
