--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,13 +2,13 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Details</title>
   </head>
   <body>
       <% if(data !== null){ %>
         <div class="upper">
-          <h3>Showing weather details for <%=data.city.name%>, <%=data.city.country%>:</h3>
+          <h3>Showing weather details for <u><%=data.city.name%>, <%=data.city.country%></u>:</h3>
         </div>
           <div class="container">
               <table>
