--- a/assets/css/Login-Form-Clean.css
+++ b/assets/css/Login-Form-Clean.css
@@ -11,14 +11,14 @@
   padding: 40px;
   border-radius: 4px;
   color: #505e6c;
-  box-shadow: 1px 1px 5px rgba(0,0,0,0.1);
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
 }
 
 .login-clean .illustration {
   text-align: center;
   padding: 0 0 20px;
   font-size: 100px;
-  color: rgb(244,71,107);
+  color: rgb(244, 71, 107);
 }
 
 .login-clean form .form-control {
@@ -65,4 +65,3 @@
   opacity: 1;
   text-decoration: none;
 }
-
