--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,68 +4,73 @@ body {
 }
 
 body {
-    margin: 0;
+  margin: 0;
   background: linear-gradient(#49a09d, #0d0c3d);
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
 
-.upper {
-  color:#000000;
-  font-family: 'Raleway',sans-serif;
-  font-size: 23px;
-  font-weight: 800;
-  line-height: 30px;
-  margin: 0 0 24px;
-  text-align: center;
-  background: #3eaba7;
+h2 {
+  color: #000000;
+  font-family: 'Raleway', sans-serif;
+  font-size: 27px;
+  text-align: left;
   position: absolute;
-  width: 100%;
-  height: 100px;
+  font-weight: 100%;
+  width: 900px;
+  margin: 0 auto;
+  display: inline-block;
 }
 
-.container {
+.tabular-part {
   position: absolute;
   font-family: sans-seri;
   font-weight: 100;
   width: 100%;
-    top: 10%;
-    left: 0%;
+  top: 8%;
+  left: 0%;
 }
+
 table {
-    width: 100%;
-    border-collapse: collapse;
-    overflow: hidden;
-    box-shadow: 0 0 20px rgba(0,0,0,0.1);
+  width: 100%;
+  border-collapse: collapse;
+  overflow: hidden;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
+
 th,
 td {
-    padding: 15px;
-    background-color: rgba(255,255,255,0.2);
-    color: #fff;
+  padding: 15px;
+  background-color: rgba(255, 255, 255, 0.2);
+  color: #fff;
 }
+
 th {
-    text-align: left;
+  text-align: left;
 }
+
 thead th {
-    background-color: #55608f;
-    color: 	#fff;
-    font-family: "Lucida Console", "Courier New", monospace;
-    font-weight: normal;
+  background-color: #55608f;
+  color: #fff;
+  font-family: "Lucida Console", "Courier New", monospace;
+  font-weight: normal;
 }
+
 tbody tr:hover {
-      background-color: rgba(255,255,255,0.3);
+  background-color: rgba(255, 255, 255, 0.3);
 }
+
 tbody td {
   position: relative;
 }
+
 tbody td:hover::before {
   content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: -9999px;
-    bottom: -9999px;
-    background-color: rgba(255,255,255,0.2);
-    z-index: -1;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: -9999px;
+  bottom: -9999px;
+  background-color: rgba(255, 255, 255, 0.2);
+  z-index: -1;
 }
